# EDDA

./: CMakeLists.txt  README.md  clean_project.sh  fresh_build.sh
EDDAestimate/: Luenberger.c  Luenberger_Beobachter.c
EDDAmisc/Config_Reader/: CMakeLists.txt  README.md
EDDAmisc/Config_Reader/example_config/: test.config
EDDAmisc/Config_Reader/include/: readConfig.hpp
EDDAmisc/Config_Reader/src/: readConfig.cpp
EDDAmodel/: CMakeLists.txt  README.md
EDDAmodel/include/: model_organizer.hpp  seven_state_model.hpp  simple_model.hpp
EDDAmodel/src/: ODEtest.c  model_organizer.cpp  seven_state_model.cpp  simple_model.cpp
EDDAsim/: .gitignore  CMakeLists.txt  README.md
EDDAsim/circuits/Circle/: Circle.xcf  circuit_parameter.config
EDDAsim/config/: sim.config
EDDAsim/include/: cmake_config.h  visual2d.hpp
EDDAsim/src/: config.h.in  main.cpp  visual2d.cpp
EDDAvisual/: placeholder.txt
